More work on fixing up build